--- a/Parking/Views/Parking/Create.cshtml
+++ b/Parking/Views/Parking/Create.cshtml
@@ -3,13 +3,14 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+
 }
 <h1 class="display-4">Parking4e</h1>
 <div class="container-fluid">
 
-    <h1 class="text-center">Create Product</h1>
+    <h1 class="text-center">Create Parking</h1>
     <hr>
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         <div class="form-group">
             <label asp-for="Name"></label>
             <input type="text" asp-for="Name" class="form-control" placeholder="Name..." />
@@ -22,32 +23,42 @@
             <label asp-for="CountPlace"></label>
             <input type="text" asp-for="CountPlace" class="form-control" placeholder="Price..." />
         </div>
-        <div class="form-group">
-            <label asp-for="Price"></label>
+        <div class="form-group" id="Price">
+            <label asp-for="Price" ></label>
             <input type="text" asp-for="Price" class="form-control" placeholder="Price..." />
         </div>
-
+        <div class="form-group">
+            <label asp-for="Image">Choose a picture: </label>
+            <input asp-for="Image" />
+        </div>
         <h2 class="text-center">Parking Type</h2>
         <hr />
 
 
         <div class="product-type-holder mt-4 d-flex justify-content-around">
+
+
             @{
                 string[] str = new[] { "PaidParking", "FreeParking" };
                 @foreach (var item in str)
                 {
                     <div class="form-check form-check-inline">
-                        <input type="radio" class="form-check-input" asp-for="ProductType" value="@item" />
+                        <input id="radioButtons" type="radio" class="form-check-input" asp-for="ProductType" value="@item" />
                         <label class="form-check-label" asp-for="@item">@item</label>
                     </div>
                 }
+
             }
 
         </div>
-        
+
         <input type="submit" value="Create" />
 
     </form>
 
 </div>
-
+@section Scripts {
+    <script>
+        
+    </script>
+}
