--- a/Parking/Views/Parking/Create.cshtml
+++ b/Parking/Views/Parking/Create.cshtml
@@ -24,8 +24,16 @@
             <input type="text" asp-for="CountPlace" class="form-control" placeholder="Price..." />
         </div>
         <div class="form-group" id="Price">
-            <label asp-for="Price" ></label>
+            <label asp-for="Price"></label>
             <input type="text" asp-for="Price" class="form-control" placeholder="Price..." />
+        </div>
+        <div class="form-group" id="Price12h">
+            <label asp-for="Price12h"></label>
+            <input type="text" asp-for="Price12h" class="form-control" placeholder="Price..." />
+        </div>
+        <div class="form-group" id="Price24h">
+            <label asp-for="Price24h"></label>
+            <input type="text" asp-for="Price24h" class="form-control" placeholder="Price..." />
         </div>
         <div class="form-group">
             <label asp-for="Image">Choose a picture: </label>
