--- a/Parking/Views/Shared/_Layout.cshtml
+++ b/Parking/Views/Shared/_Layout.cshtml
@@ -1,17 +1,43 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+﻿<html style="font-size: 16px;">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Parking</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="keywords" content="What We Believe, We advise organizations in value creation strategies, The Future That YouWill See Soon, 92, 37, 25, Our Projects, Pricing Table Template, We dwelling elegance do shutters appetite yourself diverted.">
+    <meta name="description" content="">
+    <meta name="page_type" content="np-template-header-footer-from-plugin">
+    <title>About 1</title>
+    <link rel="stylesheet" href="nicepage.css" media="screen">
+    <link rel="stylesheet" href="About-1.css" media="screen">
+    <script class="u-script" type="text/javascript" src="jquery-1.9.1.min.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
+    <meta name="generator" content="Nicepage 4.5.6, nicepage.com">
+    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
+    <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Lato:100,100i,300,300i,400,400i,700,700i,900,900i">
+    <link href="~/css/nicepage.css" rel="stylesheet" />
+    <link href="~/css/About-1.css" rel="stylesheet" />
+
+    <link href="~/css/site.css" rel="stylesheet" />
+    <link href="~/css/style.css" rel="stylesheet" />
+
+
+
+
+
+
+    <script type="application/ld+json">        {
+
+                "name": "",
+                "logo": "images/default-logo.png"
+        }</script>
+    <meta name="theme-color" content="#834496">
+    <meta property="og:title" content="About 1">
+    <meta property="og:type" content="website">
 </head>
-<body>
-    <header>
+<body class="u-body u-overlap u-xl-mode">
+    <header class="u-clearfix u-header u-header" id="sec-880a">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Parking</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">a</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -19,16 +45,16 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Начало</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Parking" asp-action="All">Приложение</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Parking" asp-action="Create">Create</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Parking" asp-action="All">ПаркингТабла</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Parking" asp-action="All">All Parkings</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Parking" asp-action="Create">Създаване на паркинг</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -42,9 +68,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - Parking - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-3bff">
+        <div class="u-clearfix u-sheet u-sheet-1">
+            <p class="u-small-text u-text u-text-variant u-text-1">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
