--- a/Parking/Views/Home/Index.cshtml
+++ b/Parking/Views/Home/Index.cshtml
@@ -1,8 +1,15 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<section class="u-clearfix u-image u-section-1" src="" id="carousel_7c3f">
+    <div class="u-clearfix u-sheet u-sheet-1">
+        <div class="u-container-style u-group u-palette-3-base u-group-1">
+            <div class="u-container-layout u-valign-middle u-container-layout-1">
+                <h1 class="u-custom-font u-font-montserrat u-text u-text-1">Умно паркиране</h1>
+                <p class="u-large-text u-text u-text-variant u-text-2">Съвременно приложение за бързо и лесно паркиране на Вашия автомобил</p>
+                
+                <a href="https://localhost:44394/Parking/All" class="u-btn u-btn-rectangle u-button-style u-radius-0 u-text-palette-3-base u-white u-btn-2">към приложението</a>
+            </div>
+        </div>
+    </div>
+</section>
