--- a/Parking/Views/Parking/ById.cshtml
+++ b/Parking/Views/Parking/ById.cshtml
@@ -5,7 +5,7 @@
         <div class="row gutters-60">
             <div class="col-lg-8">
                 <div class="single-recipe-layout1">
-                    <div class="ctg-name">@Model.ProductType</div>
+                    <div class="ctg-name">@Model.ParkingType</div>
                     <h2 class="item-title">@Model.Name</h2>
                     <div class="row mb-4">
                         <div class="col-xl-9 col-12">
