--- a/Parking/Views/Parking/Create.cshtml
+++ b/Parking/Views/Parking/Create.cshtml
@@ -51,7 +51,7 @@
                 @foreach (var item in str)
                 {
                     <div class="form-check form-check-inline">
-                        <input id="radioButtons" type="radio" class="form-check-input" asp-for="ProductType" value="@item" />
+                        <input id="radioButtons" type="radio" class="form-check-input" asp-for="ParkingType" value="@item" />
                         <label class="form-check-label" asp-for="@item">@item</label>
                     </div>
                 }
