--- a/Parking/Views/Shared/_Layout.cshtml
+++ b/Parking/Views/Shared/_Layout.cshtml
@@ -13,18 +13,17 @@
     <meta name="generator" content="Nicepage 4.5.6, nicepage.com">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Lato:100,100i,300,300i,400,400i,700,700i,900,900i">
-    <link href="~/css/nicepage.css" rel="stylesheet" />
-    <link href="~/css/About-1.css" rel="stylesheet" />
 
+
+    <link href="~/css/About-1.css" rel="stylesheet" />
+    <link href="~/css/nicepage.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
     <link href="~/css/style.css" rel="stylesheet" />
 
 
 
-
-
-
-    <script type="application/ld+json">        {
+    <script type="application/ld+json">
+        {
 
                 "name": "",
                 "logo": "images/default-logo.png"
