--- a/Parking/Views/Parking/ById.cshtml
+++ b/Parking/Views/Parking/ById.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Parking.Models.SingleParkingViewModel
 
 <section class="single-recipe-wrap-layout1 padding-top-74 padding-bottom-50">
-    <div class="container">
+    <div class="container" id="stylebyid">
         <div class="row gutters-60">
             <div class="col-lg-8">
                 <div class="single-recipe-layout1">
