--- a/Parking/Views/Parking/Create.cshtml
+++ b/Parking/Views/Parking/Create.cshtml
@@ -6,9 +6,23 @@
 
 }
 <h1 class="display-4">Parking4e</h1>
-<div class="container-fluid">
 
-    <h1 class="text-center">Създаване на паркинг</h1>
+
+<br />
+<br />
+<br />
+
+<div class="container-fluid">
+    <div class="u-align-center u-container-style u-expanded-width-sm u-expanded-width-xs u-group u-group-1">
+        <div class="u-container-layout u-valign-top u-container-layout-1">
+            <h2 class="u-custom-font u-font-montserrat u-text u-text-1">
+
+                <span class="u-text-palette-3-base">Създаване на паркинг</span>
+            </h2>
+
+        </div>
+    </div>
+    
     <hr>
     <form method="post" enctype="multipart/form-data">
         <div class="form-group">
@@ -60,7 +74,7 @@
 
         </div>
 
-        <input type="submit" value="Create" />
+        <input type="submit" value="Create" class="btn btn-primary" />
 
     </form>
 
