--- a/Parking/Views/Shared/_Layout.cshtml
+++ b/Parking/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Начало</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Parking" asp-action="All">Приложение</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Parking" asp-action="AppWork">Приложение</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Parking" asp-action="All">ПаркингТабла</a>
@@ -61,6 +61,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Price" asp-action="All">Цени</a>
                         </li>
+
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
