--- a/Parking/Views/Parking/All.cshtml
+++ b/Parking/Views/Parking/All.cshtml
@@ -2,7 +2,19 @@
 @{
     ViewData["Title"] = "All";
 }
-<h1>All Recipes</h1>
+<br />
+<br />
+<br />
+<br />
+<div class="u-align-center u-container-style u-expanded-width-sm u-expanded-width-xs u-group u-group-1">
+    <div class="u-container-layout u-valign-top u-container-layout-1">
+        <h2 class="u-custom-font u-font-montserrat u-text u-text-1">
+
+            <span class="u-text-palette-3-base">Всички паркинги</span>
+        </h2>
+
+    </div>
+</div>
 <hr />
 <div class="row">
     @foreach (var item in Model.Parkings)
