--- a/Parking/wwwroot/css/nicepage.css
+++ b/Parking/wwwroot/css/nicepage.css
@@ -18444,7 +18444,7 @@ a.pswp__share--download:hover {
 .u-list:not(.u-repeater),
 .u-blog:not(.u-repeater),
 .u-products:not(.u-repeater) {
-  display: flex;
+  display: contents;
   flex-direction: column;
 }
 .u-list:not(.u-repeater) .u-repeater,
@@ -36368,8 +36368,8 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-footer .u-text-1 {
-  width: 417px;
-  margin: 49px auto;
+  width: 717px;
+  margin: 10px auto;
 }
 @media (max-width: 1199px) {
   .u-footer .u-sheet-1 {
@@ -36391,11 +36391,26 @@ a.u-link.u-text-hover-grey-90:hover {
     min-height: 36px;
   }
 
-  .u-footer .u-text-1 {
-    width: 340px;
-  }
+    .u-footer .u-text-1 {
+        width: 340px;
+        margin: 10px auto;
+    }
+}
+#sec-3bff {
+    max-height: 50px;
 }
 
- /*begin-variables base-font-size*/ 
- html { font-size: 16px; }
+/*begin-variables base-font-size*/
+html {
+    font-size: 16px;
+}
  /*end-variables base-font-size*/
+#stylebyid {
+    margin: 0 auto;
+    background-color: blue;
+    width: 80%;
+    
+}
+.item-figure img{
+    width: 100%;
+}
