--- a/Parking/Views/Price/All.cshtml
+++ b/Parking/Views/Price/All.cshtml
@@ -37,7 +37,7 @@
                      {
                         <tr style="height: 89px;">
                             <td class="u-align-left u-first-column u-grey-5 u-table-cell u-table-cell-5">@item.Name</td>
-                            <td class="u-table-cell u-table-cell-6">@item.Price лв</td>
+                            <td class="u-table-cell u-table-cell-6">@item.Type лв</td>
                             <td class="u-grey-5 u-table-cell u-table-cell-7">@item.Price12h лв</td>
                             <td class="u-table-cell u-table-cell-8">@item.Price24h лв</td>
                         </tr>
