--- a/Parking/Views/Shared/_Layout.cshtml
+++ b/Parking/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
     <header class="u-clearfix u-header u-header" id="sec-880a">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">a</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Parking</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
