--- a/Parking/Views/Parking/FreePlaces.cshtml
+++ b/Parking/Views/Parking/FreePlaces.cshtml
@@ -33,9 +33,9 @@
                                     <div class="u-align-center-sm u-align-center-xs u-container-style u-expanded-width-md u-group u-palette-3-base u-shape-circle u-group-2">
                                         <div class="u-container-layout u-container-layout-3"></div>
                                     </div>
-                                    <h1 class="u-text u-text-body-alt-color u-title u-text-3" data-animation-name="counter" data-animation-event="scroll" data-animation-duration="3000">@item.FreePlace</h1>
+                                    <h1 class="u-text u-text-body-alt-color u-title u-text-3" data-animation-name="counter" data-animation-event="scroll" data-animation-duration="3000">@item.Free</h1>
                                     <h6 class="u-custom-font u-font-montserrat u-text u-text-4">@item.Name</h6>
-                                    <p class="u-text u-text-5">Общ брой места: @item.CountPlace</p>
+                                    <p class="u-text u-text-5">Общ брой места: @item.Total</p>
 
                                 </div>
 
