--- a/Parking/Views/Home/Index.cshtml
+++ b/Parking/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
                 <h1 class="u-custom-font u-font-montserrat u-text u-text-1">Умно паркиране</h1>
                 <p class="u-large-text u-text u-text-variant u-text-2">Съвременно приложение за бързо и лесно паркиране на Вашия автомобил</p>
                 
-                <a href="https://localhost:44394/Parking/All" class="u-btn u-btn-rectangle u-button-style u-radius-0 u-text-palette-3-base u-white u-btn-2">към приложението</a>
+                <a href="https://localhost:44394/Parking/AppWork" class="u-btn u-btn-rectangle u-button-style u-radius-0 u-text-palette-3-base u-white u-btn-2">към приложението</a>
             </div>
         </div>
     </div>
