--- a/Parking/Views/Parking/Create.cshtml
+++ b/Parking/Views/Parking/Create.cshtml
@@ -6,23 +6,19 @@
 
 }
 <h1 class="display-4">Parking4e</h1>
-
-
 <br />
 <br />
 <br />
-
 <div class="container-fluid">
     <div class="u-align-center u-container-style u-expanded-width-sm u-expanded-width-xs u-group u-group-1">
         <div class="u-container-layout u-valign-top u-container-layout-1">
             <h2 class="u-custom-font u-font-montserrat u-text u-text-1">
-
                 <span class="u-text-palette-3-base">Създаване на паркинг</span>
             </h2>
 
         </div>
     </div>
-    
+
     <hr>
     <form method="post" enctype="multipart/form-data">
         <div class="form-group">
@@ -34,21 +30,12 @@
             <textarea class="form-control" asp-for="Address" rows="4" placeholder="Адрес..."></textarea>
         </div>
         <div class="form-group">
-            <label asp-for="CountPlace">Общ брой места</label>
-            <input type="text" asp-for="CountPlace" class="form-control" placeholder="Общ брой места..." />
+            <label asp-for="Total">Общ брой места</label>
+            <input type="text" asp-for="Total" class="form-control" placeholder="Общ брой места..." />
         </div>
-        <div class="form-group" id="Price">
-            <label asp-for="Price">Цена</label>
-            <input type="text" asp-for="Price" class="form-control" placeholder="Цена..." />
-        </div>
-        <div class="form-group" id="Price12h">
-            <label asp-for="Price12h">Цена за 12 часа</label>
-            <input type="text" asp-for="Price12h" class="form-control" placeholder="Цена за 12 часа..." />
-        </div>
-        <div class="form-group" id="Price24h">
-            <label asp-for="Price24h">Цена за 24 часа</label>
-            <input type="text" asp-for="Price24h" class="form-control" placeholder="Цена за 24 часа..." />
-        </div>
+        
+       
+
         <div class="form-group">
             <label asp-for="Image">Изберете снимка: </label>
             <input asp-for="Image" />
@@ -61,13 +48,14 @@
 
 
             @{
-                string[] str = new[] { "Платен паркинг", "Безплатен паркинг" };
+                string[] str = new[] { "безплатен", "платен" };
                 @foreach (var item in str)
                 {
-                    <div class="form-check form-check-inline">
-                        <input id="radioButtons" type="radio" class="form-check-input" asp-for="ParkingType" value="@item" />
+                    <div class="form-check form-check-inline" id="Price">
+                        <input id="radioButtons" type="radio" class="form-check-input" asp-for="Type" value="@item" onclick="(ShowPrice(@item)" />
                         <label class="form-check-label" asp-for="@item">@item</label>
                     </div>
+
                 }
 
             }
@@ -81,6 +69,18 @@
 </div>
 @section Scripts {
     <script>
-        
+        var ingredientIndex = 0;
+        function ShowPrice(state) {
+            if (state == "платен") {
+                $("#Price").
+                    append(
+                        <div class="form-group" id="Price">
+                            <label asp-for="Price">Цена</label>
+                            <input type="text" asp-for="Price" class="form-control" placeholder="Цена..." />
+                        </div>);
+            }
+            
+
+        }
     </script>
 }
