--- a/Parking/Views/Shared/_Layout.cshtml
+++ b/Parking/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="keywords" content="What We Believe, We advise organizations in value creation strategies, The Future That YouWill See Soon, 92, 37, 25, Our Projects, Pricing Table Template, We dwelling elegance do shutters appetite yourself diverted.">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>About 1</title>
+    <title>Parking System</title>
     <script class="u-script" type="text/javascript" src="~/js/jquery-1.9.1.min.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="~/js/nicepage.js" defer=""></script>
     <meta name="generator" content="Nicepage 4.5.6, nicepage.com">
@@ -60,6 +60,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Price" asp-action="All">Цени</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Administration" asp-action="CreateRole">CreateRole</a>
                         </li>
 
                     </ul>
