--- a/Parking/Views/Shared/_Layout.cshtml
+++ b/Parking/Views/Shared/_Layout.cshtml
@@ -55,18 +55,18 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Parking" asp-action="All">ПаркингТабла</a>
                         </li>
-                        <li class="nav-item">
+                        <!--<li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Parking" asp-action="Create">Създаване на паркинг</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Parking" asp-action="FreePlaces">Свободни места</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Price" asp-action="All">Цени</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Administration" asp-action="CreateRole">CreateRole</a>
-                        </li>
+                        </li> -->
 
                     </ul>
                     <partial name="_LoginPartial" />
