--- a/Parking/wwwroot/css/About-1.css
+++ b/Parking/wwwroot/css/About-1.css
@@ -1562,6 +1562,7 @@
 
 .u-section-7 .u-table-cell-1 {
   background-image: none;
+  text-align: center;
 }
 
 .u-section-7 .u-table-cell-2 {
@@ -1580,6 +1581,7 @@
   font-weight: 700;
   text-transform: uppercase;
   background-image: none;
+  text-align: center;
 }
 
 .u-section-7 .u-table-cell-6 {
