--- a/Parking/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Parking/Areas/Identity/Pages/Account/Register.cshtml
@@ -7,9 +7,9 @@
 <h1>@ViewData["Title"]</h1>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4" id="register1">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h4>Create a new account.</h4>
+            <h4>Създаване на нов акаунт.</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
@@ -40,18 +40,18 @@
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+    <div class="col-md-6 col-md-offset-2" id="register1">
         <section>
-            <h4>Use another service to register.</h4>
+            <h4>
+                Регистраця за приложението.
+               
+            </h4>
             <hr />
             @{
                 if ((Model.ExternalLogins?.Count ?? 0) == 0)
                 {
                     <div>
-                        <p>
-                            There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                            for details on setting up this ASP.NET application to support logging in via external services.
-                        </p>
+                                    <p> Всеки потребител има възможността да използва приложенитето без да се регистрира.</p>
                     </div>
                 }
                 else
