--- a/Parking/Views/Parking/FreePlaces.cshtml
+++ b/Parking/Views/Parking/FreePlaces.cshtml
@@ -17,7 +17,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row" id="FreeRow">
             @foreach (var item in Model.Places)
              {
 
