--- a/Parking/Views/Parking/All.cshtml
+++ b/Parking/Views/Parking/All.cshtml
@@ -61,5 +61,5 @@
     </ul>
 </nav>
 <p>Следваща страница: @Model.NextPageNumber</p>
-<p>Брой страници: @Model.PagesCount</p>
-<p>Предишна страница: @Model.PreviousPageNumber</p>
+<!--<p>Брой страници: @Model.PagesCount</p>-->
+<!--<p>Предишна страница: @Model.PreviousPageNumber</p>-->
