--- a/Parking/Views/Shared/_Layout.cshtml
+++ b/Parking/Views/Shared/_Layout.cshtml
@@ -56,17 +56,20 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Parking" asp-action="All">ПаркингТабла</a>
                         </li>
                         <!--<li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Parking" asp-action="Create">Създаване на паркинг</a>
-                        </li> -->
+        <a class="nav-link text-dark" asp-area="" asp-controller="Parking" asp-action="Create">Създаване на паркинг</a>
+    </li> -->
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Parking" asp-action="FreePlaces">Свободни места</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Price" asp-action="All">Цени</a>
                         </li>
-                        <!-- <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Administration" asp-action="CreateRole">CreateRole</a>
-                        </li> -->
+                        @if (this.User.IsInRole("Admin"))
+                         {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Administration" asp-action="CreateRole">Създаване на роля</a>
+                            </li>                
+                         }
 
                     </ul>
                     <partial name="_LoginPartial" />
